--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
       "dest": "server.js",
       "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
       "headers": {
-        "Access-Control-Allow-Origin": "*"
+        "Access-Control-Allow-Origin": "https://classroom-app-fe.vercel.app"
       }
     }
   ]
